--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,7 @@
         <activity android:name=".services.activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.VIEW" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -29,8 +30,7 @@
         </service>
         <service
             android:name=".services.AlarmService"
-            android:enabled="true"
-            android:exported="true" />
+            android:enabled="true" />
     </application>
 
 </manifest>
