--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -34,8 +34,7 @@
         <service
             android:name=".services.AlarmService"
             android:enabled="true"
-            android:process=":alarmProcess"
-            android:isolatedProcess="true"/>
+            android:process=":alarmProcess"/>
     </application>
 
 </manifest>
